--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
 			<footer id="info">
 				<p>Double-click to edit a todo</p>
 				<p>Credits:
-					<a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
-					<a href="http://ericbidelman.com">Eric Bidelman</a>,
-					<a href="http://jacobmumm.com">Jacob Mumm</a> and
-					<a href="http://igorminar.com">Igor Minar</a>
+					<a href=>Lejla Memic</a>,
+					
 				</p>
 				<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 			</footer>
